[package]
name = "stereo_measure"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "3dme"
path = "src/main.rs"

[dependencies]
log = "0.4"
env_logger = "0.11"

image = "0.25"
imageproc = "0.25"

nalgebra = { version = "0.33", features = ["serde-serialize"] }

thiserror = "2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

parking_lot = "0.12"
rayon = "1.10"

indicatif = "0.17"

clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

warp = "0.3"
tokio = { version = "1", features = ["full"] }

webbrowser = "1.0"

[profile.release]
opt-level = 3
lto = true